Fix https URL for twitter and fix upper case in wording

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h2 class="featurette-heading">A propos,
                 <span class="text-muted">pour quoi une association ?</span>
             </h2>
-			<p class="lead">principalement, la promotion et la diffusion des m&eacute;thodes agiles et des pratiques de d&eacute;veloppement logiciel associ&eacute;es dans l'agglom&eacute;ration rennaise par tous moyens de communication et d'intervention : conf&eacute;rence, s&eacute;minaire, rencontre,</p>
+			<p class="lead">Principalement, la promotion et la diffusion des m&eacute;thodes agiles et des pratiques de d&eacute;veloppement logiciel associ&eacute;es dans l'agglom&eacute;ration rennaise par tous moyens de communication et d'intervention : conf&eacute;rence, s&eacute;minaire, rencontre,</p>
 			<p class="lead">accessoirement, l'accompagnement et l'incubation de communaut&eacute;s et &eacute;v&egrave;nements, essentiellement dans le Grand Ouest.</p>
         </div>
 
@@ -107,7 +107,7 @@
             </h2>
             <p class="lead"><a href="mailto:contact@agilerennes.org"><img src="mail.png" border="0"></a>
 			&nbsp;<a href="https://www.facebook.com/agilerennes"><img src="facebook.png" border="0"></a>
-            &nbsp;<a href="htpps://twitter.com/agilerennes"><img src="twitter.png" border="0"></a></p>
+            &nbsp;<a href="https://twitter.com/agilerennes"><img src="twitter.png" border="0"></a></p>
         </div>
 
         <hr class="featurette-divider">
