Add section for Agile Tour Rennes

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                         <a href="#about">A propos</a>
                     </li>
                     <li>
+                        <a href="#atr">Agile Tour Rennes</a>
+                    </li>
+                    <li>
                         <a href="#services">Devenir Membre</a>
                     </li>
                     <li>
@@ -75,9 +78,9 @@
 
         <hr class="featurette-divider">
 
-        <!-- First Featurette -->
+        <!-- Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="why.png">
+            <img class="featurette-image img-circle img-responsive pull-left" src="why.png">
             <h2 class="featurette-heading">A propos,
                 <span class="text-muted">pour quoi une association ?</span>
             </h2>
@@ -87,7 +90,19 @@
 
         <hr class="featurette-divider">
 
-        <!-- Second Featurette -->
+        <!-- Featurette -->
+        <div class="featurette" id="atr">
+            <img class="featurette-image img-circle img-responsive pull-right" src="agileTourRennes.png">
+            <h2 class="featurette-heading">Agile Tour 
+                <span class="text-muted">Rennes</span>
+            </h2>
+            <p class="lead">L'association Agile Rennes porte chaque année le principal événement breton autour de l'agilité. L'équipe d'organisation de cet événement est composé de membres de l'association.</p>
+            <p class="lead">Pour y participer, nous vous invitons à aller vers <a href="http://agiletour.agilerennes.org/">le site dédié à l'événement</a></p>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <!-- Featurette -->
         <div class="featurette" id="services">
             <img class="featurette-image img-circle img-responsive pull-left" src="rejoindre.png">
             <h2 class="featurette-heading">L'envie de
@@ -99,7 +114,7 @@
 
         <hr class="featurette-divider">
 
-        <!-- Third Featurette -->
+        <!-- Featurette -->
         <div class="featurette" id="contact">
             <img class="featurette-image img-circle img-responsive pull-right" src="contact.png">
             <h2 class="featurette-heading">Contacter
