--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <span class="text-muted">pour quoi une association ?</span>
             </h2>
 			<p class="lead">Principalement, la promotion et la diffusion des m&eacute;thodes agiles et des pratiques de d&eacute;veloppement logiciel associ&eacute;es dans l'agglom&eacute;ration rennaise par tous moyens de communication et d'intervention : conf&eacute;rence, s&eacute;minaire, rencontre,</p>
-			<p class="lead">accessoirement, l'accompagnement et l'incubation de communaut&eacute;s et &eacute;v&egrave;nements, essentiellement dans le Grand Ouest.</p>
+			<p class="lead">Accessoirement, l'accompagnement et l'incubation de communaut&eacute;s et &eacute;v&egrave;nements, essentiellement dans le Grand Ouest.</p>
         </div>
 
         <hr class="featurette-divider">
