Add meetup section, fix anchors and update Agile Tour Rennes section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                         <a href="#atr">Agile Tour Rennes</a>
                     </li>
                     <li>
+                        <a href="#meetup">Nos RDV mensuels</a>
+                    </li>
+                    <li>
                         <a href="#services">Devenir Membre</a>
                     </li>
                     <li>
@@ -71,15 +74,14 @@
                 <h2>promouvoir l'agilit&eacute; sur Rennes et sa r&eacute;gion</h2>
             </div>
         </div>
-    </header>
+    </header >
 
     <!-- Page Content -->
-    <div class="container">
-
-        <hr class="featurette-divider">
+    <div class="container" id="about">
 
         <!-- Featurette -->
-        <div class="featurette" id="about">
+        <br><br>
+        <div class="featurette" >
             <img class="featurette-image img-circle img-responsive pull-left" src="why.png">
             <h2 class="featurette-heading">A propos,
                 <span class="text-muted">pour quoi une association ?</span>
@@ -88,23 +90,38 @@
 			<p class="lead">Accessoirement, l'accompagnement et l'incubation de communaut&eacute;s et &eacute;v&egrave;nements, essentiellement dans le Grand Ouest.</p>
         </div>
 
-        <hr class="featurette-divider">
+        <hr class="featurette-divider" id="atr">
 
         <!-- Featurette -->
-        <div class="featurette" id="atr">
+        <div class="featurette" >
             <img class="featurette-image img-circle img-responsive pull-right" src="agileTourRennes.png">
             <h2 class="featurette-heading">Agile Tour 
                 <span class="text-muted">Rennes</span>
             </h2>
-            <p class="lead">L'association Agile Rennes porte chaque année le principal événement breton autour de l'agilité. L'équipe d'organisation de cet événement est composé de membres de l'association.</p>
-            <p class="lead">Pour y participer, nous vous invitons à aller vers <a href="http://agiletour.agilerennes.org/">le site dédié à l'événement</a></p>
+            <p class="lead">L'association Agile Rennes porte chaque année le principal événement breton autour de l'agilité. L'équipe d'organisation de cet événement est composé de membres de l'association. Cette année il a lieu vendredi 14 et samedi 15 Octobre.</p>
+            <p class="lead">Pour y participer, nous vous invitons à aller sur <a href="http://agiletour.agilerennes.org/">le site dédié à l'événement</a></p>
+            <p class="lead">Pour acheter vos places, la billeterie est  <a href="https://www.weezevent.com/agile-tour-rennes-2016">ici</a></p>
+            <p class="lead">Pour être orateur, rien de plus simple, déposer simplement votre proposition de session ou d'atelier sur <a href="http://cfp.agiletour.agilerennes.org/">notre cfp</a></p>
         </div>
 
-        <hr class="featurette-divider">
+        <hr class="featurette-divider" id="meetup">
 
         <!-- Featurette -->
-        <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left" src="rejoindre.png">
+        <div class="featurette" >
+            <img class="featurette-image img-circle img-responsive pull-left" src="meetup.png">
+            <h2 class="featurette-heading">Nos rendez-vous mensuels 
+                <span class="text-muted"></span>
+            </h2>
+            <p class="lead">Chaque mois, nos membres font tout ce qu'ils peuvent pour programmer un meetup sur l'agilité. Le but est de s'enrichir grâce à une conférence ou un atelier animé par une bonne volonté. Les apprentissages et les échanges y sont très riches.
+            </p>
+            <p class="lead">Pour y participer, nous vous invitons à aller sur <a href="http://www.meetup.com/fr-FR/Agile-Rennes/">notre page meetup </a></p>
+            <p class="lead">Si vous avez envie de venir animé un meetup, <a href="#contact">nous avous accueillons à bras très grand ouverts ! </a></p>
+        </div>
+        <hr class="featurette-divider" id="services">
+
+        <!-- Featurette -->
+        <div class="featurette" >
+            <img class="featurette-image img-circle img-responsive pull-right" src="rejoindre.png">
             <h2 class="featurette-heading">L'envie de
                 <span class="text-muted">nous rejoindre vous tente</span>
             </h2>
@@ -112,11 +129,11 @@
 			<p class="lead">Nous vous invitons &agrave; venir nous rencontrer &agrave; travers les diff&eacute;rents &eacute;v&egrave;nements que l'association portent (voir calendrier) ou &agrave; nous contacter</p></p>
         </div>
 
-        <hr class="featurette-divider">
+        <hr class="featurette-divider" id="contact">
 
         <!-- Featurette -->
-        <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="contact.png">
+        <div class="featurette" >
+            <img class="featurette-image img-circle img-responsive pull-left" src="contact.png">
             <h2 class="featurette-heading">Contacter
                 <span class="text-muted">Agile Rennes</span>
             </h2>
@@ -125,7 +142,6 @@
             &nbsp;<a href="https://twitter.com/agilerennes"><img src="twitter.png" border="0"></a></p>
         </div>
 
-        <hr class="featurette-divider">
 
         <!-- Footer -->
         <footer>
