Fix link for status doc in Devenir Membre seciton

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </h2>
             <p class="lead">Vous souhaitez vous investir dans la communaut&eacute; et devenir membre de l'association ? Rien de plus simple : vous trouverez ci-dessous le statut de l'association ainsi que son r&egrave;glement int&eacute;rieur. La cotisation est de 10&euro; par ann&eacute;e civile.</p>
 			<p class="lead">Nous vous invitons &agrave; venir nous rencontrer &agrave; travers les diff&eacute;rents &eacute;v&egrave;nements que l'association portent ou &agrave; nous contacter.</p></p>
-            <p class="lead"><a nref="https://drive.google.com/file/d/0B_rjVpd5MCJrVkxoZTdEOXg3YVk/view?usp=sharing">Statuts Agile Rennes</a> / <a href="https://drive.google.com/open?id=0B_rjVpd5MCJrazhYWmxyYXRkcUk">Règlement Intérieur Agile Rennes</a> / <a href="https://drive.google.com/open?id=0B_rjVpd5MCJrV0hHcGt6RzNXWUE">Bulletin d’adhésion 2016</a></p>
+            <p class="lead"><a href="https://drive.google.com/file/d/0B_rjVpd5MCJrVkxoZTdEOXg3YVk/view?usp=sharing">Statuts Agile Rennes</a> / <a href="https://drive.google.com/open?id=0B_rjVpd5MCJrazhYWmxyYXRkcUk">Règlement Intérieur Agile Rennes</a> / <a href="https://drive.google.com/open?id=0B_rjVpd5MCJrV0hHcGt6RzNXWUE">Bulletin d’adhésion 2016</a></p>
         </div>
 
         <hr class="featurette-divider" id="contact">
