Fix sentence formulation in 2 sections - feedback Matthieu B.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <p class="lead">L'association Agile Rennes porte chaque année le principal événement breton autour de l'agilité. L'équipe d'organisation de cet événement est composé de membres de l'association. Cette année il a lieu vendredi 14 et samedi 15 Octobre.</p>
             <p class="lead">Pour y participer, nous vous invitons à aller sur <a href="http://agiletour.agilerennes.org/">le site dédié à l'événement</a></p>
             <p class="lead">Pour acheter vos places, la billeterie est  <a href="https://www.weezevent.com/agile-tour-rennes-2016">ici</a></p>
-            <p class="lead">Pour être orateur, rien de plus simple, déposer simplement votre proposition de session ou d'atelier sur <a href="http://cfp.agiletour.agilerennes.org/">notre cfp</a></p>
+            <p class="lead">Pour être orateur, vous pouvez venir déposer votre proposition de session ou d'atelier sur <a href="http://cfp.agiletour.agilerennes.org/">notre cfp</a></p>
         </div>
 
         <hr class="featurette-divider" id="meetup">
@@ -115,7 +115,7 @@
             <p class="lead">Chaque mois, nos membres font tout ce qu'ils peuvent pour programmer un meetup sur l'agilité. Le but est de s'enrichir grâce à une conférence ou un atelier animé par une bonne volonté. Les apprentissages et les échanges y sont très riches.
             </p>
             <p class="lead">Pour y participer, nous vous invitons à aller sur <a href="http://www.meetup.com/fr-FR/Agile-Rennes/">notre page meetup </a></p>
-            <p class="lead">Si vous avez envie de venir animé un meetup, <a href="#contact">nous avous accueillons à bras très grand ouverts ! </a></p>
+            <p class="lead">Si vous voulez animer un meetup, <a href="#contact">nous avous accueillons à bras très grand ouverts ! </a></p>
         </div>
         <hr class="featurette-divider" id="services">
 
